--- a/index.html
+++ b/index.html
@@ -2,24 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/bb3100f551.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
     <link rel="stylesheet" href="style.css">
+    <title>Salah</title>
 </head>
 <body>
     <div id="login">
-        <h1>COSTLY</h1>
+        <div id="text">
+            <h1>COSTLY</h1>
+        </div>
         <div id="inputs">
-            <input type="email" id="aa" placeholder="Email">
-            <input type="password" id="bb" placeholder="Password">
+            <input type="email" id="aa" placeholder="  email">
+            <input type="password" id="bb" placeholder="  password">
         </div>
         <div id="icons">
-            <a href="#"><img src="twitter-icon.png" id="a" alt="Twitter"></a>
-            <a href="#"><img src="facebook-icon.png" id="b" alt="Facebook"></a>
-            <a href="#"><img src="instagram-icon.png" id="c" alt="Instagram"></a>
+            <i class="fa-brands fa-twitter" style="color: #fffffffb;" id="a"></i>
+            <i id="b" class="fa-brands fa-facebook-f" style="color: #ffffff;"></i>
+            <i id="c" class="fa-brands fa-instagram" style="color: #ffffff;"></i>
         </div>
-        <div id="buttons">
-            <button id="sas1">Sign in</button>
+        <div id="button">
+            <button id="sas1"><i class="fa-solid fa-check" style="color: #ffffff;"></i> Sign in</button>
             <button id="sas2">Political privacy</button>
         </div>
     </div>
